# DroneControl

./: .gitignore  Instructions.md  MainTest.cpp  MainTest.out  README  training_data.pkl
CircleMotionPlugin/: CircleMotionPlugin.cpp
DQN/: dqn.py  example  recieve.cpp  test.cpp  training_data_model.pth
DQN/Best_result/: training_data_model.pth
GazeboPlugin/: CMakeLists.txt  GazeboPlugin.cpp  GazeboPlugin.hpp
MAVSDK/: CMakeLists.txt  MainTest.cpp
Movingbox/: CMakeLists.txt  CircleMotionPlugin.cpp  empty.world
PosTest/: CMakeLists.txt  package.xml
World/: empty.world
