<?xml version="1.0"?>
<package format="2">
  <name>PosTest</name>
  <version>0.0.0</version>
  <description>The PosTest package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

